--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -187,6 +187,9 @@ margin-left: 25%;
   margin-left:calc(100% - 75%);
 } 
 
+.disable-btn{
+  background: linear-gradient(to right, rgb(134, 133, 138) 0%, rgb(159, 158, 162) 47%, rgb(162, 150, 165) 100%) !important;
+}
 
 /***********newcode***************/
 .full-w{
