--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1129,7 +1129,7 @@
                     </div>
                     <div class="form-group">
                         <label for="abstract">Abstract:</label>
-                        <textarea class="form-control" formControlName="abstract" placeholder="1000 words"></textarea>
+                        <textarea class="form-control" formControlName="abstract" placeholder="1000 words" maxlength="1000"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="technologyArea">Technology Area:</label>
